updated all pages

--- a/biking.html
+++ b/biking.html
@@ -12,7 +12,7 @@
         <ul id="menu">
             <li><a href="./index.html">About me</a> </li>
             <li><a href="./biking.html">🚵‍♂️Mountain Biking🚵‍♂️</a> </li>
-            <li><a href="/">Football</a> </li>
+            <li><a href="./football.html">Football</a>   </li>
             <li><a href="./fishing.html">Fishing</a> </li>
         </ul>
     </header>
@@ -22,23 +22,18 @@
             <div class="image">
                 <img src="./images/DH1.jpg" alt="cool bike" />
                 <p>
-                    Miki e umen
+                    Много обичам да карам колело.Винаги обаче съм имал евтино и некачествено колело с което се опитвах да скачам скокчетата в южния парк.Когато задобрях, помолих родителите ми да ми купят по-хубаво колело.Те ми купиха колелото и започнах да карам много по-сериозно и да се спускам в стил Downhill което значи спускане.За мен това е изключително интересно и много често го практикувам.Спорта е много опасен и родителите ми се притесняват, защото вече 2 пъти си счупих ръката с колелото на едни много големи скокове. 
                 </p>
             </div>
 
             <div class="image">
-                <img src="./images/DH1.jpg" alt="cool bike" />
+                <img src="./images/DH3.JPG" alt="cool bike" />
                 <p>
-                    Miki e umen
+                   На тази снимка аз скачам един много малък скок с колелото ми.
                 </p>
             </div>
 
-            <div class="image">
-                <img src="./images/DH1.jpg" alt="cool bike" />
-                <p>
-                    Miki e umen
-                </p>
-            </div>
+
 
         </section>
 
