--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <html>
 
 <head>
-<title>Stanislav Mikov - Home Page</title>
-<link rel="stylesheet" href="./index.css" />
+    <title>Stanislav Mikov - Home Page</title>
+    <link rel="stylesheet" href="./index.css" />
 
 </head>
 
 <body>
-<header>
- <h1>Stani Mikov's hobbies</h1>
-<ul id="menu"> 
-<li><a href="./index.html">About me</a>   </li>
-<li><a href="./biking.html">Mountain Biking</a>   </li>
-<li><a href="/">Football</a>   </li>
-<li><a href="./fishing.html">Fishing</a>   </li>
-</ul>
-</header>   
-<main>
-<h2>About me</h2>
-<p>
-Az sum ohluv
+    <header>
+        <h1>Stani Mikov's hobbies</h1>
+        <ul id="menu">
+            <li><a href="./index.html">About me</a> </li>
+            <li><a href="./biking.html">Mountain Biking</a> </li>
+            <li><a href="./football.html">Football</a> </li>
+            <li><a href="./fishing.html">Fishing</a> </li>
+        </ul>
+    </header>
+    <main>
+        <h2>About me</h2>
+        
+        <p id="intro">
+            Казвам се Станислав Миков и съм на 14 години.Роден съм на 17.11.2006 година.Това е моят сайт в който ще
+            научите повече за мен и за хобитата ми.
+
+        </p>
+<div id="main-photo">
+    <img  src="./images/DH1.jpg" alt="cool bike" />
+
+</div>
+        
 
 
-</p>
-</main>
+
+    </main>
 
 </body>
 
