updated football page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <p id="intro">
             Казвам се Станислав Миков и съм на 14 години.Роден съм на 17.11.2006 година.Това е моят сайт в който ще
-            научите повече за мен и за хобитата ми.
+            научите повече за мен и за хобитата ми. Можете да свържете с мен на телефон <а href="tel:0888563852">0888563852</a>
 
         </p>
 <div id="main-photo">
