--- a/football.html
+++ b/football.html
@@ -12,25 +12,25 @@
         <ul id="menu">
             <li><a href="./index.html">About me</a> </li>
             <li><a href="./biking.html">Mountain Biking</a> </li>
-            <li><a href="./football.html">Football</a>   </li>
-            <li><a href="./fishing.html">🐟Fishing🐟</a> </li>
+            <li><a href="./football.html">⚽Football⚽</a>   </li>
+            <li><a href="./fishing.html">Fishing</a> </li>
         </ul>
     </header>
     <main>
-        <h2>🐟Fishing🐟</h2>
+        <h2>⚽Football⚽</h2>
         <section id="gallery">
 
             <div class="image">
-                <img src="./images/FISH 2.png" alt="great fish" />
+                <img src="./images/Stani football 1.jpg" alt="great image" />
                 <p>
-                    Много обичам да ходя за риба.За мен това е много голяма част от ежедневието ми всяко лято.Ловя риба от много малък, като в началото започнах с стил 'плувка' това е най-лесният метод и лових така доста време.Преди 2 години един приятел ме научи да ловя риба с ръце и смятам, че това е много приятно.
+                Тренирам футбол от 4 годишен.Това значи близо 10 години.Това е моят любим спорт и никога няма да спра да го практикувам.Много силно се надявам да стана професионален футболист и ако стана искам да приличам по стил на игра на човекът чиято снимка е под мен.В България е много трудно да станеш професионалист, но аз ще направя всичко възможно да стана. 
                 </p>
             </div>
 
             <div class="image">
-                <img src="./images/FISH 1.png" alt="big fish" />
+                <img src="./images/football 3.jpg" alt="great image" />
                 <p>
-                   Тук слагам снимка на рибата която ме е направила най-щастлив от всички риби които съм хващал.
+                  Това е моят любим футболист.Казва се Kylian Mbappe.Той е французин и играе за националния отбор на Франция и за ПСЖ.Това са два много сериозни отбора, а той е голмайстор и на двата, въпреки че е само на 22 години. 
                 </p>
 
 
